--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,22 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+
+# IDE Files #
+**/.settings/
+**/.project
+**/.classpath
+**/.idea/
+**/.iml
+
+# Mac OS Specific File #
+**/.DS_Store
+
 hub
 htop
 yarn.lock
-node_modules/
+node_modules
+/
 configstore
 coc/
 
